@@ -2,23 +2,30 @@ package manager;
 import task.Task;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private final List<Task> history = new ArrayList<>();
+    private final LinkedList<Task> history;
+    private final int maxSize;
+
+    public InMemoryHistoryManager(int maxSize) {
+        this.history = new LinkedList<>();
+        this.maxSize = maxSize;
+    }
+
 
     @Override
     public void add(Task task) {
-        if (history.contains(task)) {
-            history.remove(task);
-        } else if (history.size() == 10) {
-            history.remove(0);
+        history.remove(task);
+        if (history.size() == maxSize) {
+            history.removeFirst();
         }
         history.add(task);
     }
 
     @Override
     public List<Task> getHistory() {
-        return new ArrayList<>(history);
+        return new LinkedList<>(history);
     }
 }
